Added CompositeRhythm