@@ -35,19 +35,19 @@ import java.util.logging.Logger;
 /**
  * A RhythmParameter composed of a set of strings.
  * <p>
- * All Set instances returned are immutable.
+ * All returned Set instances are immutable.
  */
-public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<Set<String>>
+public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<Set<String>>, Cloneable
 {
-
+    
     public static final int MAX_SET_SIZE = 10;
-    private String id;
-    private String displayName;
-    private String description;
-    private Set<String> defaultValue;
-    private Set<String> minValue;
-    private Set<String> maxValue;
-    private List<String> possibleValues;
+    private final String id;
+    private final String displayName;
+    private final String description;
+    private final Set<String> defaultValue; // Unmodifiable values
+    private final Set<String> minValue; // Unmodifiable values
+    private final Set<String> maxValue; // Unmodifiable values
+    private final List<String> possibleValues; // Unmodifiable values
     private final boolean primary;
     protected static final Logger LOGGER = Logger.getLogger(RP_StringSet.class.getName());
 
@@ -61,42 +61,47 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
      * @param description
      * @param isPrimary
      * @param defaultValue   All members of the Set must be one of the possibleValues
-     * @param possibleValues String[] The possible values which can be used in a Set (max MAX_SET_SIZE). By convention, min value is set to
-     *                       the 1st possible value, max value to the last one. The empty string must not be one of the possible values.
+     * @param possibleValues String[] The possible values which can be used in a Set (max MAX_SET_SIZE). By convention, min value is set to the 1st possible
+     *                       value, max value to the last one. The empty string must not be one of the possible values.
      */
     public RP_StringSet(String id, String name, String description, boolean isPrimary, Set<String> defaultValue, String... possibleValues)
     {
         if (id == null || name == null || defaultValue == null || possibleValues == null || possibleValues.length == 0 || possibleValues.length > MAX_SET_SIZE)
         {
-            throw new IllegalArgumentException( 
+            throw new IllegalArgumentException(
                     "id=" + id + " name=" + name + " defaultVal=" + defaultValue + " possibleValues=" + Arrays.asList(possibleValues));
         }
         this.id = id;
         this.displayName = name;
         this.description = description;
-        this.possibleValues = Arrays.asList(possibleValues);
+        this.possibleValues = List.of(possibleValues);
         if (this.possibleValues.indexOf("") != -1)
         {
-            throw new IllegalArgumentException("n=" + name + " defaultVal=" + defaultValue + " possibleValues=" + this.possibleValues);   
+            throw new IllegalArgumentException("n=" + name + " defaultVal=" + defaultValue + " possibleValues=" + this.possibleValues);            
         }
         this.defaultValue = Collections.unmodifiableSet(defaultValue);
         if (!isValidValue(defaultValue))
         {
-            throw new IllegalArgumentException("n=" + name + " defaultVal=" + defaultValue + " possibleValues=" + this.possibleValues);   
+            throw new IllegalArgumentException("n=" + name + " defaultVal=" + defaultValue + " possibleValues=" + this.possibleValues);            
         }
         this.minValue = Collections.unmodifiableSet(new HashSet<>());
         this.maxValue = Collections.unmodifiableSet(new HashSet<>(this.possibleValues));
         this.primary = isPrimary;
-
+        
     }
 
-
+    @Override
+    public RP_StringSet getCopy(Rhythm r)
+    {
+        return new RP_StringSet(id, displayName, description, primary, defaultValue, possibleValues.toArray(String[]::new));
+    }    
+    
     @Override
     public boolean isPrimary()
     {
         return primary;
     }
-
+    
     @Override
     public int hashCode()
     {
@@ -109,7 +114,7 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
         hash = 37 * hash + (this.primary ? 1 : 0);
         return hash;
     }
-
+    
     @Override
     public boolean equals(Object obj)
     {
@@ -148,14 +153,14 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
         }
         return Objects.equals(this.possibleValues, other.possibleValues);
     }
-
-
+    
+    
     @Override
     public final String getId()
     {
         return id;
     }
-
+    
     @Override
     public final Set<String> getDefaultValue()
     {
@@ -199,7 +204,7 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
     {
         if (p < 0 || p > 1)
         {
-            throw new IllegalArgumentException("p=" + p);   
+            throw new IllegalArgumentException("p=" + p);            
         }
         HashSet<String> set = new HashSet<>();
         long pBin = Math.round(10000 * p);
@@ -210,7 +215,7 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
                 set.add(possibleValues.get(i));
             }
             pBin >>= 1;
-
+            
             if (pBin == 0)
             {
                 // No need to loop further
@@ -235,23 +240,23 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
     {
         if (!isValidValue(value))
         {
-            throw new IllegalArgumentException("value=" + value + " possibleValues=" + possibleValues);   
+            throw new IllegalArgumentException("value=" + value + " possibleValues=" + possibleValues);            
         }
         double p = 0;
         for (String s : value)
         {
             int index = possibleValues.indexOf(s);
-            assert index != -1 : "s=" + s;   
+            assert index != -1 : "s=" + s;            
             p += Math.pow(2, index);
         }
         if (p > 10000)
         {
-            throw new IllegalStateException("p=" + p + " value=" + value);   
+            throw new IllegalStateException("p=" + p + " value=" + value);            
         }
 //      LOGGER.severe("calculatePercentage() value="+value+" p="+p);
         return p / 10000;
     }
-
+    
     @Override
     public final String getDescription()
     {
@@ -275,19 +280,19 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
     {
         return minValue;
     }
-
+    
     @Override
     public final String getDisplayName()
     {
         return displayName;
     }
-
+    
     @Override
     public final Set<String> getNextValue(Set<String> value)
     {
         if (!isValidValue(value))
         {
-            throw new IllegalArgumentException("value=" + value + " this=" + this);   
+            throw new IllegalArgumentException("value=" + value + " this=" + this);            
         }
         double maxPercentage = (Math.pow(2, possibleValues.size()) - 1) / 10000d;
         double p = calculatePercentage(value);
@@ -299,13 +304,13 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
         Set<String> nextValue = calculateValue(p);
         return nextValue;
     }
-
+    
     @Override
     public final Set<String> getPreviousValue(Set<String> value)
     {
         if (!isValidValue(value))
         {
-            throw new IllegalArgumentException("value=" + value + " this=" + this);   
+            throw new IllegalArgumentException("value=" + value + " this=" + this);            
         }
         double maxPercentage = (Math.pow(2, possibleValues.size()) - 1) / 10000d;
         double p = this.calculatePercentage(value);
@@ -348,7 +353,7 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
         }
         return res;
     }
-
+    
     @Override
     public Set<String> loadFromString(String s)
     {
@@ -372,34 +377,34 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
         }
         return Collections.unmodifiableSet(res);
     }
-
+    
     @Override
     public String getValueDescription(Set<String> value)
     {
         return null;
     }
-
+    
     @Override
     public String toString()
     {
         return getDisplayName();
     }
-
+    
     @Override
     public boolean isCompatibleWith(RhythmParameter<?> rp)
     {
         return rp instanceof RP_StringSet && rp.getId().equals(getId());
     }
-
+    
     @Override
     public <T> Set<String> convertValue(RhythmParameter<T> rp, T value)
     {
         Preconditions.checkArgument(isCompatibleWith(rp), "rp=%s is not compatible with this=%s", rp, this);
         Preconditions.checkNotNull(value);
-
+        
         Set<String> res = new HashSet<>();
         Set<String> setValue = (Set<String>) value;
-
+        
         for (String s : setValue)
         {
             if (possibleValues.contains(s))
@@ -407,10 +412,10 @@ public class RP_StringSet implements RhythmParameter<Set<String>>, RpEnumerable<
                 res.add(s);
             }
         }
-
+        
         return Collections.unmodifiableSet(res);
     }
-
+    
     @Override
     public String getDisplayValue(Set<String> value)
     {
